[gd_scene load_steps=74 format=2]

[ext_resource path="res://src/game/spells/spell_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/spells/tornado.gd" type="Script" id=2]
[ext_resource path="res://assets/gfx/game/skill_effects/GameFXexport/SPRITESHEET_Files/TornadoLoop_96x96.png" type="Texture" id=3]
[ext_resource path="res://src/game/spells/tornado_sprite_frames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://src/resource_classes/object_area_circle_shape.gd" type="Script" id=5]

[sub_resource type="Shader" id=62]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform sampler2D noise; 
uniform float fade_out_fraction : hint_range(0.0, 1.0, 0.01) = 0.0;

void vertex()
{
	float n = texture(noise, VERTEX + TIME  * vec2(0.0, 0.1)).r * 2.;
	VERTEX.x *= n;
}

void fragment()
{
	float t = 0.1;

	vec4 col = texture(TEXTURE, UV);
	vec4 back_sample = texture(TEXTURE, fract(UV - vec2(t - 1., 0.0)));
	col = back_sample;
	col.a *= pow(UV.y, 1.4);

	col.a *= smoothstep(1.0 - fade_out_fraction, 1.0 - fade_out_fraction - 0.01, UV.y);

	COLOR = col;
}"

[sub_resource type="OpenSimplexNoise" id=64]
seed = 126

[sub_resource type="NoiseTexture" id=65]
seamless = true
noise = SubResource( 64 )

[sub_resource type="ShaderMaterial" id=63]
shader = SubResource( 62 )
shader_param/fade_out_fraction = 0.0
shader_param/noise = SubResource( 65 )

[sub_resource type="Shader" id=68]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float fade_out_fraction : hint_range(0.0, 1.0, 0.01) = 0.0;


void fragment()
{
	vec4 col = texture(TEXTURE, UV);
	col.a *= smoothstep(1.0 - fade_out_fraction, 1.0 - fade_out_fraction - 0.01, UV.y);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=69]
shader = SubResource( 68 )
shader_param/fade_out_fraction = 0.0

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 5568, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 5664, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 1152, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 1248, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1344, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 1440, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 1632, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 1728, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 1824, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 2016, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 2112, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 2208, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 2400, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 2496, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 2592, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 2688, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 2784, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 2880, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 2976, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 3168, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 3264, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 3360, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 3456, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 3552, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 3648, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 3744, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 3936, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 4032, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 4128, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 4224, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 4320, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 4416, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 4512, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 4608, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 4704, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 4800, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 4896, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 4992, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 5088, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 5184, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 5280, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 5376, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 5472, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "loop",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=67]
radius = 18.0

[node name="Tornado" instance=ExtResource( 1 )]
script = ExtResource( 2 )
fade_out_duration = 0.0

[node name="Pivot" type="Node2D" parent="." index="0"]

[node name="BackAnim" type="AnimatedSprite" parent="Pivot" index="0"]
modulate = Color( 0.501961, 0.501961, 0.501961, 0.490196 )
material = SubResource( 63 )
frames = ExtResource( 4 )
animation = "loop"
frame = 18
playing = true
offset = Vector2( 0, -32 )
flip_h = true

[node name="FrontAnim" type="AnimatedSprite" parent="Pivot" index="1"]
material = SubResource( 69 )
frames = SubResource( 66 )
animation = "loop"
frame = 13
playing = true
offset = Vector2( 0, -32 )

[node name="Areas" type="Node2D" parent="." index="1"]

[node name="DamageArea" type="Area2D" parent="Areas" index="0"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 5 )
owner_path = NodePath("../..")
NP_collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/DamageArea" index="0"]
shape = SubResource( 67 )

[connection signal="area_entered" from="Areas/DamageArea" to="." method="_on_DamageArea_area_entered"]
